# bayes_objects_tracker

./: CMakeLists.txt  README.md  package.xml
config/erl4/: confusion_matrix.yaml  detectors.yaml  names.yaml
config/furniture/: confusion_matrix.yaml  detectors.yaml  names.yaml
config/mad/: confusion_matrix.yaml  detectors.yaml  names.yaml
config/small_objects/: confusion_matrix.yaml  detectors.yaml  names.yaml
include/: ekf.h  filter_info.h  models.h  objects_tracker.h  simple_tracking.h  ukf.h
launch/: bayes_objects_tracker.launch
src/: ekf.cpp  models.cpp  objects_tracker.cpp  ukf.cpp
